# t-commenter

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
_archive/: MANIFEST.in  setup.cfg
docs/source/: conf.py  index.rst
examples/: example_usage.py
tcommenter/: __init__.py  tсommenter.py
