[metadata]
name = t-commenter
version = 0.1.1
author = ArtemXYZ
author_email = poznyshev.a.a@yandex.ru
description = A module for working with table metadata (comments on tables, views, materialized views, and columns) \
    in PostgreSQL.

long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/ArtemXYZ/t-commenter.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

packages = find:

python_requires = >=3.8, <4.0

[options]
install_requires =
    SQLAlchemy>=2.0.37, <3.0.0
    psycopg2-binary>=2.9.0, <3.0.0

[options.packages.find]
where = tcommenter

[options.extras_require]
dev =
    pytest>=8.3.4, <9.0.0

[options]
include_package_data = True